--- a/index.html
+++ b/index.html
@@ -1,27 +1,45 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Journal</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <script type="text/javascript" src="build/js/app.js"></script>
-  </head>
-  <body>
-    <form id="entryform">
-      <label for="entry-title">Entry Title:</label>
-      <input type="text" id="entry-title">
+<head>
+  <meta charset="utf-8">
+  <title>Journal</title>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <script type="text/javascript" src="build/js/app.js"></script>
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
 
-      <label for="entry-body">Entry Body:</label>
-      <input type="text" id="entry-body">
+  <div class="container">
 
-      <button type="submit" name="button">Submit Entry</button>
+    <div class="jumbotron">
+      <h1>Journal</h1>
+    </div>
+
+    <form id="entryform" class="form-group">
+      <label for="entry-title">Title:</label>
+      <input type="text" id="entry-title" class="form-control" required>
+      <label for="entry-body">Body:</label>
+      <input type="text" id="entry-body" class="form-control" required>
+      <br>
+      <button type="submit" name="button" class="btn btn-success">Submit Entry</button>
     </form>
 
-    <h1 id="title"></h1>
-    <p id="body"></p>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title" id="title"></h3>
+      </div>
+      <div class="panel-body" id="body">
+      </div>
+    </div>
 
-    <p id="wordcount"></p>
-    <p id="vowelcount"></p>
-    <p id="consonantcount"></p>
+    <div class="well">
+      <p id="wordcount"></p>
+      <p id="vowelcount"></p>
+      <p id="consonantcount"></p>
+      <p id="teaser"></p>
+    </div>
+
   </body>
+</div>
 </html>
